Migrate from APIs deprecated in Java 9